--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -161,6 +161,10 @@ table td{
     padding: 10px 20px;
     min-width: 135px;
 }
-#add-course{
+.course{
     display: none;
+}
+
+.course.active{
+	display: block;
 }
